fix social buttons alignment

--- a/modules/app/components/sidebar/Sidebar.module.scss
+++ b/modules/app/components/sidebar/Sidebar.module.scss
@@ -33,6 +33,7 @@
 
 .socialButtons {
   margin-left: auto;
+  margin-right: auto;
   display: flex;
 }
 
